<resources>
    <string name="app_name" translatable="false">Decces Charging Animation</string>
    <string name="charging_animation">Animations</string>
    <string name="allow">Allow</string>
    <string name="setting_instructions">Setting instructions</string>
    <string name="if_your_device_does_not_have_this_permission_you_can_ignore_it">If your device does not have this permission, you can ignore it</string>
    <string name="more_information">More Information</string>
    <string name="lock_screen_display_instructions">Lock screen display instructions</string>
    <string name="notifications">Notifications</string>
    <string name="flash">Flash</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="working_in_background">Working in background</string>
    <string name="your_device_is_fully_charged">Your device is fully charged</string>
    <string name="show_on_unlocked_screen">Show on unlocked screen</string>

    <string name="instruction_short">In the App Info > Permissions > Allow Show on Lock screen/Lock screen notification</string>
    <string name="instruction_long">Turn on the lock screen display, so that the device can display the charging animation normally when the screen is locked, but the setting paths of various devices are different, please refer to the following settings\n\nMeizu setting path: Settings -> Apps -> Charging Animation -> Permissions -> Show on Lock screen/Lock screen notification\n\nXiaomi setting path: setting -> Apps -> permissions -> Permissions -> Charging Animation -> Show on Lock screen\n\nOPPO setting path: Settings -> Apps -> Charging Animation -> Notification Management -> Display on the lock screen\n\nVIVO setting path: i Manager -> Software Management -> Permissions Management -> Lock Screen Display -> Charging Animation -> Check to open</string>
    <string name="apply">Apply</string>
    <string name="settings">Settings</string>
    <string name="popular">Popular</string>
    <string name="other">Other</string>
    <string name="get_permissions">Get permissions</string>
    <string name="allow_display_over_other_apps">Allow display over other apps</string>
    <string name="not_now">Not Now</string>
    <string name="ok">Ok</string>
    <string name="main">Main</string>
    <string name="social">Social</string>
    <string name="interesting_fact">Interesting fact</string>
    <string name="you_can_swipe_to_see_more_pictures">You can swipe to see more pictures</string>
    <string name="give_permissions_so_that_the_application_can_work_properly">Give permissions so that the application can work properly</string>
    <string name="allow_showing_over_other_apps_this_is_necessary_for_correct_work_of_the_application">Allow showing over other apps. This is necessary for correct work of the application</string>
    <string name="give_permission">Give permission</string>
    <string name="enable_charging_animation">Enable Charging Animation</string>
    <string name="applied">Animation Applied</string>
    <string name="collection">Collection</string>
    <string name="cancel">Cancel</string>

</resources>