<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16sp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="360:40"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/buttonBack"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_back"
                    android:tint="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent="0.0666" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/isEnableApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_turn_on_off"
                android:drawablePadding="16sp"
                android:drawableTint="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center|start"
                android:text="@string/show_on_unlocked_screen"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="1sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintDimensionRatio="235:24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/isShowNotification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_notifications"
                android:drawablePadding="16sp"
                android:drawableTint="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center|start"
                android:text="@string/notifications"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="1sp"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/isFlashing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_flash"
                android:drawablePadding="16sp"
                android:drawableTint="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center|start"
                android:text="@string/flash"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="1sp"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/isVibration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_vibration"
                android:drawablePadding="16sp"
                android:drawableTint="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center|start"
                android:text="@string/vibration"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="1sp"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/isSound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_sound"
                android:drawablePadding="16sp"
                android:drawableTint="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center|start"
                android:text="@string/sound"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="1sp"
                app:autoSizeTextType="uniform" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buttonShare"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center|start"
                android:paddingVertical="5sp"
                android:text="@string/share"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="1sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintDimensionRatio="312:24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buttonRateUs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center|start"
                android:paddingVertical="5sp"
                android:text="@string/rate_us"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="1sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintDimensionRatio="312:24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buttonPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center|start"
                android:paddingVertical="5sp"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="1sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintDimensionRatio="312:24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</layout>