<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="com.bubble.charging.ui.custom.ScalableCardView.ScaleType"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.bubble.charging.ui.custom.ScalableCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="332:578"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="0dp"
            scaleType="@{ScaleType.BY_WIDTH}"
            scalableCornerRadius="@{0.03012f}">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintDimensionRatio="332:526"
                    android:src="@drawable/permision_screen_bg"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintWidth_percent="0.4367"
                    app:layout_constraintVertical_bias="0.2886836"
                    android:src="@mipmap/permission_dialog_image_instruction"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/buttonClose"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintWidth_percent="0.099"
                    app:layout_constraintVertical_bias="0.022"
                    app:layout_constraintHorizontal_bias="0.959866"
                    android:src="@mipmap/ic_close"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintDimensionRatio="228:26"
                    app:layout_constraintWidth_percent="0.6867"
                    app:layout_constraintVertical_bias="0.0978"
                    android:gravity="center"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeMinTextSize="1sp"
                    android:textColor="#3C3B3B"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/setting_instructions"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintDimensionRatio="311:69"
                    app:layout_constraintWidth_percent="0.9367"
                    app:layout_constraintVertical_bias="0.61886"
                    android:gravity="center"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="1sp"
                    android:textColor="#3C3B3B"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/instruction_short"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintDimensionRatio="289:40"
                    app:layout_constraintWidth_percent="0.87048"
                    app:layout_constraintVertical_bias="0.7509"
                    android:gravity="center"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="1sp"
                    android:textColor="#3C3B3B"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/if_your_device_does_not_have_this_permission_you_can_ignore_it"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/buttonMoreInfo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintDimensionRatio="240:49"
                    app:layout_constraintWidth_percent="0.72289"
                    app:layout_constraintVertical_bias="0.89603"
                    android:background="@drawable/blue_button_bg">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="191:22"
                        app:layout_constraintHeight_percent="0.448979"
                        android:gravity="center"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="1sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/more_information"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.bubble.charging.ui.custom.ScalableCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>