<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="360:776">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="270:234"
                android:orientation="vertical"
                android:background="#F3FDEE">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="113.29">
                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintHeight_percent="2.44"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/lottie_swipe"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="24.63">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="238:24.63"
                        android:gravity="center"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMaxTextSize="17sp"
                        app:autoSizeMinTextSize="1sp"
                        android:textColor="#0A0A0B"
                        android:fontFamily="@font/circe_bold"
                        android:text="@string/interesting_fact"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4.6"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="41.1">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="238:41.1"
                        android:alpha="0.6"
                        android:gravity="center_horizontal"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMaxTextSize="13sp"
                        app:autoSizeMinTextSize="1sp"
                        android:textColor="#032B10"
                        android:fontFamily="@font/sf_pro_text_regular"
                        android:text="@string/you_can_swipe_to_see_more_pictures"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.12"
                    android:background="#260A0A0B"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/buttonOk"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="49.26">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="238:24.63"
                        app:layout_constraintHeight_percent="0.5"
                        android:gravity="center"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMaxTextSize="17sp"
                        app:autoSizeMinTextSize="1sp"
                        android:textColor="#006D1F"
                        android:fontFamily="@font/sf_pro_text_bold"
                        android:text="@string/ok"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>